--- a/plants.html
+++ b/plants.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Plants by Dhanusha</h1>
+<h1>Plants by Dhanusha Dommati</h1>
 
 </body>
 </html>
