--- a/plants.html
+++ b/plants.html
@@ -11,6 +11,27 @@
 </head>
 <body>
 <h1>Plants by Dhanusha Dommati</h1>
-
-</body>
-</html>
+<div class="container">
+ 
+    <div class="row">
+        <div class="col-sm-2">D</div>
+        <div class="col-sm-2">O</div>
+        <div class="col-sm-2">M</div>
+        <div class="col-sm-2">M</div>
+        <div class="col-sm-2">A</div>
+        <div class="col-sm-2">T</div>
+    </div>
+  
+    <div class="row">
+        <div class="col-md">DAYLILLY</div>
+        <div class="col-md">OXBLOOD LILY</div>
+        <div class="col-md">MARI GOLD</div>
+        <div class="col-md">MONKEY FLOWER</div>
+        <div class="col-md"> AFRICAN DASIY</div>
+        <div class="col-md">TECOMA</div>
+    </div>
+  </div>
+  <p>The rows that have with plants names  will break first.</p>
+    <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.</p>
+  </body>
+  </html
