--- a/plants.html
+++ b/plants.html
@@ -33,5 +33,9 @@
   </div>
   <p>The rows that have with plants names  will break first.</p>
     <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.</p>
+    <img src="daylilly.PNG" alt="" width="400" height="400">
+   <img src="oxbloodlilly.PNG" alt="" width="400" height="400">
+   <img src="Marigold.PNG" alt="" width="400" height="400">
+</div>
   </body>
   </html
