--- a/plants.html
+++ b/plants.html
@@ -31,11 +31,16 @@
         <div class="col-md">TECOMA</div>
     </div>
   </div>
+  <div >
   <p>The rows that have with plants names  will break first.</p>
     <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.</p>
     <img src="daylilly.PNG" alt="" width="400" height="400">
    <img src="oxbloodlilly.PNG" alt="" width="400" height="400">
    <img src="Marigold.PNG" alt="" width="400" height="400">
 </div>
+<div class="container">
+  <a href="ABELIA.jpeg"  target="_blank"><img src="ABELIA.jpeg" height="400" width="400"></a>
+  <a href="VACCINIUM.jpeg"  target="_blank"><img src="VACCINIUM.jpeg" height="400" width="400"></a>
+  <a href="UMBRELLA.jpg"  target="_blank"><img src="UMBRELLA.jpg" height="400" width="400"></a>
   </body>
   </html
