--- a/plants.html
+++ b/plants.html
@@ -39,8 +39,9 @@
    <img src="Marigold.PNG" alt="" width="400" height="400">
 </div>
 <div class="container">
-  <a href="ABELIA.jpeg"  target="_blank"><img src="ABELIA.jpeg" height="400" width="400"></a>
-  <a href="VACCINIUM.jpeg"  target="_blank"><img src="VACCINIUM.jpeg" height="400" width="400"></a>
-  <a href="UMBRELLA.jpg"  target="_blank"><img src="UMBRELLA.jpg" height="400" width="400"></a>
+  <a href="daylilly.PNG"  target="_blank"><img src="daylilly.PNG" height="400" width="400"></a>
+  <a href="oxbloodlilly.PNG"  target="_self"><img src="oxbloodlilly.PNG" height="400" width="400"></a>
+  <a href="Marigold.PNG"  target="_blank"><img src="Marigold.PNG" height="400" width="400"></a>
+  </div>
   </body>
   </html
