--- a/plants.html
+++ b/plants.html
@@ -38,7 +38,7 @@
    <img src="oxbloodlilly.PNG" alt="" width="400" height="400">
    <img src="Marigold.PNG" alt="" width="400" height="400">
 </div>
-<div class="container">
+<div>
   <a href="daylilly.PNG"  target="_blank"><img src="daylilly.PNG" height="400" width="400"></a>
   <a href="oxbloodlilly.PNG"  target="_self"><img src="oxbloodlilly.PNG" height="400" width="400"></a>
   <a href="Marigold.PNG"  target="_blank"><img src="Marigold.PNG" height="400" width="400"></a>
