--- a/plants.html
+++ b/plants.html
@@ -33,15 +33,19 @@
   </div>
   <div >
   <p>The rows that have with plants names  will break first.</p>
-    <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.</p>
+    <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.
+ </p>
+<div class="img-responsive">
     <img src="daylilly.PNG" alt="" width="400" height="400">
    <img src="oxbloodlilly.PNG" alt="" width="400" height="400">
    <img src="Marigold.PNG" alt="" width="400" height="400">
 </div>
-<div>
+<br>
+<div class="thumbnail">
   <a href="daylilly.PNG"  target="_blank"><img src="daylilly.PNG" height="400" width="400"></a>
   <a href="oxbloodlilly.PNG"  target="_self"><img src="oxbloodlilly.PNG" height="400" width="400"></a>
   <a href="Marigold.PNG"  target="_blank"><img src="Marigold.PNG" height="400" width="400"></a>
+
   </div>
   </body>
   </html
