--- a/plants.html
+++ b/plants.html
@@ -35,16 +35,15 @@
   <p>The rows that have with plants names  will break first.</p>
     <p>It occurs because the pixel size of md is 768px if the pixel size of sm is 576px  the screen size decreases below 768px  and the row  with plant names breaks.
  </p>
-<div class="img-responsive">
-    <img src="daylilly.PNG" alt="" width="400" height="400">
-   <img src="oxbloodlilly.PNG" alt="" width="400" height="400">
-   <img src="Marigold.PNG" alt="" width="400" height="400">
+<div class="container">
+    <img src="daylilly.PNG" class="img-fluid" alt="" width="400" height="400">
+   <img src="oxbloodlilly.PNG" class="img-fluid" alt="" width="400" height="400">
+   <img src="Marigold.PNG" class="img-fluid" alt="" width="400" height="400">
 </div>
-<div class="thumbnail">
-  <a href="daylilly.PNG"  target="_blank"><img src="daylilly.PNG" height="400" width="400"></a>
-  <a href="oxbloodlilly.PNG"  target="_self"><img src="oxbloodlilly.PNG" height="400" width="400"></a>
-  <a href="Marigold.PNG"  target="_blank"><img src="Marigold.PNG" height="400" width="400"></a>
-
-  </div>
+<div class="container">
+  <img src="daylilly.PNG" class="img-thumbnail" alt="amarnath" width="400" height="400">
+        <img src="oxbloodlilly.PNG"  class="img-thumbnail"alt="tulip" width="400" height="400">
+        <img src="Marigold.PNG" class="img-thumbnail" alt="hibicus" width="400" height="400">     
+    </div>
   </body>
   </html
