--- a/plants.html
+++ b/plants.html
@@ -45,5 +45,47 @@
         <img src="oxbloodlilly.PNG"  class="img-thumbnail"alt="tulip" width="200" height="200">
         <img src="Marigold.PNG" class="img-thumbnail" alt="hibicus" width="200" height="200">     
     </div>
+    <table>
+      <thead>
+        <tr>
+          <th>LETTER</th>
+          <th>PLANT</th>
+          <th>CITY</th>
+          <th>FOOD</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>D</td>
+          <td>DAYLILLY</td>
+          <td>DELHI</td>
+          <td>DOSA</td>
+        </tr>
+        <tr>
+          <td>O</td>
+          <td>OXBLOOD LILY</td>
+          <td>OOTY</td>
+          <td>OMLET</td>
+        </tr>
+        <tr>
+          <td>M</td>
+          <td>MARI GOLD</td>
+          <td>MUMBAI</td>
+          <td>MIRCHI BAJJI</td>
+        </tr>
+        <tr>
+          <td>M</td>
+          <td>AFRICAN DASIY</td>
+          <td>MYSORE</td>
+          <td>MEATBALLS</td>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>TECOMA</td>
+          <td>THIRUVANANTHAPURAM</td>
+          <td>TEA</td>
+        </tr>
+      </tbody>
+      </table>
   </body>
   </html
