--- a/plants.html
+++ b/plants.html
@@ -47,7 +47,7 @@
     </div>
     <table>
       <thead>
-        <tr>
+        <tr class="table-dark">
           <th>LETTER</th>
           <th>PLANT</th>
           <th>CITY</th>
@@ -55,31 +55,31 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class="table-secondary">
           <td>D</td>
           <td>DAYLILLY</td>
           <td>DELHI</td>
           <td>DOSA</td>
         </tr>
-        <tr>
+        <tr class="table-success">
           <td>O</td>
           <td>OXBLOOD LILY</td>
           <td>OOTY</td>
           <td>OMLET</td>
         </tr>
-        <tr>
+        <tr class="table-danger">
           <td>M</td>
           <td>MARI GOLD</td>
           <td>MUMBAI</td>
           <td>MIRCHI BAJJI</td>
         </tr>
-        <tr>
+        <tr class="table-warning">
           <td>M</td>
           <td>AFRICAN DASIY</td>
           <td>MYSORE</td>
           <td>MEATBALLS</td>
         </tr>
-        <tr>
+        <tr  class="table-info">
           <td>T</td>
           <td>TECOMA</td>
           <td>THIRUVANANTHAPURAM</td>
