--- a/plants.html
+++ b/plants.html
@@ -47,7 +47,7 @@
     </div>
     <table>
       <thead>
-        <tr class="table-dark">
+        <tr class="table-primary">
           <th>LETTER</th>
           <th>PLANT</th>
           <th>CITY</th>
