--- a/plants.html
+++ b/plants.html
@@ -48,39 +48,39 @@
     <table>
       <thead>
         <tr class="table-primary">
-          <th>LETTER</th>
-          <th>PLANT</th>
-          <th>CITY</th>
-          <th>FOOD</th>
+          <th scope="col">LETTER</th>
+          <th scope="col">PLANT</th>
+          <th scope="col">CITY</th>
+          <th scope="col">FOOD</th>
         </tr>
       </thead>
       <tbody>
         <tr class="table-secondary">
-          <td>D</td>
+          <td scope="row">D</td>
           <td>DAYLILLY</td>
           <td>DELHI</td>
           <td>DOSA</td>
         </tr>
         <tr class="table-success">
-          <td>O</td>
+          <td scope="row">O</td>
           <td>OXBLOOD LILY</td>
           <td>OOTY</td>
           <td>OMLET</td>
         </tr>
         <tr class="table-danger">
-          <td>M</td>
+          <td scope="row">M</td>
           <td>MARI GOLD</td>
           <td>MUMBAI</td>
           <td>MIRCHI BAJJI</td>
         </tr>
         <tr class="table-warning">
-          <td>M</td>
+          <td scope="row">M</td>
           <td>AFRICAN DASIY</td>
           <td>MYSORE</td>
           <td>MEATBALLS</td>
         </tr>
         <tr  class="table-info">
-          <td>T</td>
+          <td scope="row">T</td>
           <td>TECOMA</td>
           <td>THIRUVANANTHAPURAM</td>
           <td>TEA</td>
