--- a/plants.html
+++ b/plants.html
@@ -45,7 +45,8 @@
         <img src="oxbloodlilly.PNG"  class="img-thumbnail"alt="tulip" width="200" height="200">
         <img src="Marigold.PNG" class="img-thumbnail" alt="hibicus" width="200" height="200">     
     </div>
-    <table>
+    <table class="table" table-striped table-bordered table-hover>
+      <caption>My Table</caption>
       <thead>
         <tr class="table-primary">
           <th scope="col">LETTER</th>
@@ -54,7 +55,6 @@
           <th scope="col">FOOD</th>
         </tr>
       </thead>
-      <tbody>
         <tr class="table-secondary">
           <td scope="row">D</td>
           <td>DAYLILLY</td>
@@ -85,7 +85,6 @@
           <td>THIRUVANANTHAPURAM</td>
           <td>TEA</td>
         </tr>
-      </tbody>
       </table>
   </body>
   </html
