--- a/plants.html
+++ b/plants.html
@@ -87,11 +87,11 @@
         </tr>
       </table>
       <div>
-        <button type="button" class="btn btn-success"></Datag></button>
+        <button type="button" class="btn btn-success">D</Datag></button>
         <button type="button" class="btn btn-warning">O</button>
         <button type="button" class="btn btn-success">M</button>
         <button type="button" class="btn btn-danger">M</button>
-        <button type="button" class="btn btn-link">M</button>
+        <button type="button" class="btn btn-link">A</button>
         <button type="button" class="btn btn-danger">T</button>
         
           
