--- a/plants.html
+++ b/plants.html
@@ -90,8 +90,8 @@
         <button type="button" class="btn btn-success">D</Datag></button>
         <button type="button" class="btn btn-warning">O</button>
         <button type="button" class="btn btn-success">M</button>
-        <button type="button" class="btn btn-danger">M</button>
-        <button type="button" class="btn btn-link">A</button>
+        <button type="button" class="btn btn-link">M</button>
+        <button type="button" class="btn btn-danger">A</button>
         <button type="button" class="btn btn-danger">T</button>
         
           
