--- a/plants.html
+++ b/plants.html
@@ -112,6 +112,15 @@
       <div class="btn-group" aria-label="third group">
         <button type="button" class="btn btn-danger">T</button>
       </div>
+      
+      <div class="dropdown">
+        <button type="button" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Select page
+        </button>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="cat.html">Cat page</a>
+            <a class="dropdown-item" href="dog.html">Dog page</a>
+        </div>
   </div>
   </body>
   </html
