--- a/plants.html
+++ b/plants.html
@@ -108,7 +108,7 @@
         <button type="button" class="btn btn-warning">M</button>
         <button type="button" class="btn btn-warning">A</button>
       </div>
-    
+    </div>
       <div class="btn-group" aria-label="third group">
         <button type="button" class="btn btn-danger">T</button>
       </div>
