--- a/plants.html
+++ b/plants.html
@@ -108,11 +108,12 @@
         <button type="button" class="btn btn-warning">M</button>
         <button type="button" class="btn btn-warning">A</button>
       </div>
-    </div>
+    
       <div class="btn-group" aria-label="third group">
         <button type="button" class="btn btn-danger">T</button>
       </div>
-    </br>
+    </div>
+    
       <div class="dropdown">
         <button type="button" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Select page
@@ -121,6 +122,22 @@
             <a class="dropdown-item" href="cat.html">Cat page</a>
             <a class="dropdown-item" href="dog.html">Dog page</a>
         </div>
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="InputPlant">Plant</label>
+            <input type="text" class="form-control" id="Inputplant" placeholder="Enter your plant">
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
   </div>
   </body>
   </html
