--- a/plants.html
+++ b/plants.html
@@ -142,6 +142,7 @@
             <a class="dropdown-item" href="cat.html">Cat page</a>
             <a class="dropdown-item" href="dog.html">Dog page</a>
         </div>
+      </div>
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -158,6 +159,29 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-  </div>
+        <div class="card-group">
+          <div class="card">
+            <img class="card-img-top" src="daylilly.PNG" alt="daylilly" >
+            <div class="card-body">
+              <h5 class="card-title">daylilly</h5>
+              <p class="card-text">A daylily or day lily is a flowering plant in the genus Hemerocallis /ˌhɛmɪroʊˈkælɪs/,[2] a member of the family Asphodelaceae, subfamily Hemerocallidoideae. Despite the common name, it is not in fact a lily. Gardening enthusiasts and horticulturists have long bred daylily species for their attractive flowers. Thousands of cultivars have been registered by local and international Hemerocallis societies.[</p>             
+               <a href="https://en.wikipedia.org/wiki/Daylily" class="btn btn-primary">Read more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="oxbloodlilly.PNG" alt="oxbloodlilly">
+            <div class="card-body">
+              <h5 class="card-title">Oxbloodlilly</h5>
+              <p class="card-text">Native to Argentina, this tough- as-nails amaryllis relative was introduced into the Texas Hill Country by German settlers in the 1850s. Narrow, foot-long leaves emerge in fall, persist through winter and spring, and then die down. In August or September, following a rain, clusters of blood-red, 2 inches-long flowers appear atop leafless foot-tall stalks.Set bulbs out in spring, planting them 4 inches deep, 1 feet apart. </p>
+              <a href="https://www.southernliving.com/plants/oxblood-lily" class="btn btn-primary">Read more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="Marigold.PNG" alt="Marigold">
+            <div class="card-body">
+              <h5 class="card-title">Marigold</h5>
+              <p class="card-text">Marigolds are a favorite, no-fuss annual that can bring the color of sunshine to your garden, as well as butterflies, bees, ladybugs, and other beneficial insects. Give them full sun and some well-draining soil and watch them bloom from late spring until fall.Marigold seeds germinate quickly, within just a few days, and bloom in about 8 weeks. </p>
+              <a href="https://www.gardendesign.com/flowers/marigold.html" class="btn btn-primary">Read more</a>
+            </div>
   </body>
   </html
